--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-svgmin": "^3.1.2",
     "grunt-usemin": "^3.1.1",
     "grunt-wiredep": "^2.0.0",
+    "grunt-force": "^1.0.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "jshint-stylish": "^2.1.0",
